--- a/app/views/advertisements/index.html.slim
+++ b/app/views/advertisements/index.html.slim
@@ -10,28 +10,28 @@
 = render 'advertisements/search_form'
 
 .well.well-sm
-  - if @root_section.present?
-    - if @root_section.h1.present?
-      h1.header-font
-        == bb_tags(@root_section.h1, @bbtags)
-    - unless params[:advertisement].empty?
-      p
-        i.fa.fa-list
-        '
-        == bb_tags("Найдено [b]search_entries[/b]", @bbtags)
-
-    - else
+  - unless params[:advertisement].empty?
+    p
+      i.fa.fa-list
+      '
+      == bb_tags("Найдено [b]search_entries[/b]", @bbtags)
+  - else
+    - if @root_section.present?
+      - if @root_section.h1.present?
+        h1.header-font
+          == bb_tags(@root_section.h1, @bbtags)
       - if @root_section.p.present?
         p
           == bb_tags(@root_section.p, @bbtags)
 
   = render 'advertisements/search_results'
-  - if @root_section.present?
-    - if @root_section.h2.present?
-      h2.header-font
-        == bb_tags(@root_section.h2, @bbtags)
-    - if @root_section.p2.present?
-      p
-        == bb_tags(@root_section.p2, @bbtags)
+  - if params[:advertisement].empty?
+    - if @root_section.present?
+      - if @root_section.h2.present?
+        h2.header-font
+          == bb_tags(@root_section.h2, @bbtags)
+      - if @root_section.p2.present?
+        p
+          == bb_tags(@root_section.p2, @bbtags)
   = advertisements_pagination
 
