--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -1,4 +1,6 @@
-- if @locations.count < 20 && @locations['street'].blank?
+- if @location.present? && @location.city?
+  legend
+    | Районы
   - @locations.each_value do |value|
     .row.top-buffer
       .col-md-12
@@ -6,11 +8,19 @@
           - value.sort_by{ |l| l[:title] }.each do |location|
             .location-button name="#{location[:location_type]}" has_children="#{location[:has_children]}" lid="#{location[:id]}" class="button btn btn-default SelectLocation"
               = location[:title]
-- else
-  .row.pop-show-location
+  legend
+    | Улыцы
+  row.top-buffer
     .col-md-12
-      form.form-horizontal role="form"
-        .form-group
-          label.col-sm-6.popover-short-padding.control-label for="autocomplete" Поиск по названию
-          .col-sm-6.popover-long-padding
-            input.form-control.autocomplete-search-location parent_id="#{@location.id}" multiple=true
+      .form-group
+        label.popover-short-padding.control-label for="autocomplete" Поиск по улице
+        '
+        input.form-control.autocomplete-search-location parent_id="#{@location.id}" multiple=true
+- else
+  - @locations.each_value do |value|
+    .row.top-buffer
+      .col-md-12
+        .btn-group data-toggle="buttons"
+          - value.sort_by{ |l| l[:title] }.each do |location|
+            .location-button name="#{location[:location_type]}" has_children="#{location[:has_children]}" lid="#{location[:id]}" class="button btn btn-default SelectLocation"
+              = location[:title]
