--- a/app/views/advertisements/get_search_attributes.js.erb
+++ b/app/views/advertisements/get_search_attributes.js.erb
@@ -1,4 +1,4 @@
-$('.additional_search_params_action').remove()
-$('.additional_search_params_container_action').prepend("<%= j render 'advertisements/additional_search_params' %>")
+$('.additional_search_params_action').remove();
+$('.additional_search_params_container_action').prepend("<%= j render 'advertisements/additional_search_params' %>");
 
 
