--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -27,8 +27,6 @@
             label.btn.btn-default.click_additional_search_params_action class="#{'active' if active}"
               input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
         '
-
-
       .form-group
         label.control-label
           i.fa.fa-building
@@ -60,7 +58,7 @@
         '
         span.button-toolbar
           .location-group multi=true state="#{@location_state}"
-            .button.btn.btn-default.btn-lg.GetChildren lid="#{0}" data-toggle="dropdown"
+            .button.btn.btn-default.GetChildren lid="#{0}" data-toggle="dropdown"
               i.fa.fa-globe.fa-lg
               '
               | выберите местоположение
