--- a/app/views/advertisements/search_inputs/_integer.html.slim
+++ b/app/views/advertisements/search_inputs/_integer.html.slim
@@ -5,10 +5,10 @@
       '
     = t("advertisement.attributes.#{attr[:name_from]}").mb_chars.downcase
   '
-  input.text-input-lg.width-define class=attr[:class_name_input] name="advertisement[#{attr[:name_from]}]" type="text" value=attr[:value_from]
+  input.text-input-lg.width-define class=attr[:class_name_input] name="advertisement[#{attr[:name_from]}]" valid-type='integer' type="text" value=attr[:value_from]
   '
   label —
   '
-  input.text-input-lg.width-define class=attr[:class_name_input] name="advertisement[#{attr[:name_to]}]" type="text" value=attr[:value_to]
+  input.text-input-lg.width-define class=attr[:class_name_input] name="advertisement[#{attr[:name_to]}]" valid-type='integer' type="text" value=attr[:value_to]
 
 
