new complex veiw of adv

--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -34,9 +34,15 @@
 }
 
 .search-photo-size{
-  width: 600px;
-  height: 400px;
+  width: 540px;
+  height: 300px;
 }
+
+.search-photo-size-preview{
+  width: 90px;
+  height: 70px;
+}
+
 .width-define{
   width: 110px;
 }
