--- a/app/views/advertisements/_popover_locations.html.slim
+++ b/app/views/advertisements/_popover_locations.html.slim
@@ -1,4 +1,6 @@
 - @locations.each_value do |value|
+  legend
+    = t("activerecord.attributes.location.#{value.first[:location_type]}")
   .row.top-buffer
     .col-md-12
       .btn-group data-toggle="buttons"
