--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -3,91 +3,89 @@
 = content_for :meta
   meta name="description" content=@adv.description
   meta name="keywords" content=@adv.keywords
+= content_for :header
+  ol.breadcrumb
+    - @sorted_locations.each do |location|
+      - section = @sections.find {|section| section.location_id == location.id}
+      - if section.present?
+        li
+          = link_to location.title, section.url
+    li.active
+      span
+        = "Объявление № #{@adv.id}"
 h1
   = @adv.h1
-ol.breadcrumb
-  - @sorted_locations.each do |location|
-    - section = @sections.find {|section| section.location_id == location.id}
-    - if section.present?
-      li
-        = link_to location.title, section.url
-  li.active
-    span
-      = "Объявление № #{@adv.id}"
-.well.clearfix
-  p.col-lg-12
-    span.small.text-muted
-      | Размещено
-      '
-      strong
-        = Russian::strftime @adv.created_at.to_date
-      '
-      | Обновлено
-      '
-      strong
-        = Russian::strftime @adv.updated_at.to_date
-      '
-      | Просмотров:
-      '
-      | всего
-      '
-      strong
-        = @all_days_counter.count
-      |,
-      '
-      |сегодня
-      '
-      strong
-        = @today_counter.count
-    span.pull-right
-      a.btn.btn-warning.btn-xs
-        i.fa.fa-warning.fa-lg
-        '
-        | пожаловаться
-      '
-      a.btn.btn-default.btn-xs
-        i.fa.fa-book.fa-lg
-        '
-        | добавить в блокнот
-  - if @photos.present?
-    .col-xs-12.col-lg-7.pull-right.clearfix
-      = image_tag @photos.first.advertisement_photo, class: 'img-responsive first_photo_img_action search-photo-size'
-      p.text-center.first_photo_comment_action
-        = @photos.first.comment
-      - @photos.each do |photo|
-        a.show_photo_action href="#" full_scr=photo.advertisement_photo comment=photo.comment
-          = image_tag photo.advertisement_photo(:thumb), class: 'col-xs-2 thumbnail', style: 'width: 145px;height: 90px;'
-  .col-lg-5.clearfix
-    p
-      = @adv.comment
-    - @grouped_allowed_attributes.each do |group|
-      - next if group[0] == 'comment'
-      - attr_from = group[0]
-      - attr_to = group[1]
-      - value_from = @adv.send(attr_from)
-      - value_to = @adv.send(attr_to) if attr_to.present?
-      - if value_from.present? || value_to.present?
-        p
-          label
-            = t("advertisement.attributes.#{attr_from}")
-          | :
-          - if value_from.present?
-            '
-            - if value_to.present?
-              | от
-              '
-            span.lead
-              = value_from
-            '
-            = t("advertisement.units.#{attr_from}")
-          - if value_to.present?
-            - if value_from.present?
-              | до
-              '
-            = value_to
-            '
-            = t("advertisement.units.#{attr_from}")
-    p
+.well.well-sm.clearfix
+  .row
+    - if @photos.present?
+      .col-xs-12.col-lg-6.pull-right.clearfix
+        = image_tag @photos.first.advertisement_photo, class: 'first_photo_img_action search-photo-size'
+        p.text-center.first_photo_comment_action
+          = @photos.first.comment
+        - @photos.each do |photo|
+          a.show_photo_action href="#" full_scr=photo.advertisement_photo comment=photo.comment
+            = image_tag photo.advertisement_photo(:thumb), class: 'col-xs-2 thumbnail search-photo-size-preview'
+
+    .col-lg-6
+      p
+        span.small.text-muted
+          | Размещено
+          '
+          strong
+            = Russian::strftime @adv.created_at.to_date
+          '
+          | Обновлено
+          '
+          strong
+            = Russian::strftime @adv.updated_at.to_date
+          '
+          | Просмотров:
+          '
+          | всего
+          '
+          strong
+            = @all_days_counter.count
+          |,
+          '
+          |сегодня
+          '
+          strong
+            = @today_counter.count
+        - if @adv.comment.present?
+          br
+          = @adv.comment
+
+
+      - if @grouped_allowed_attributes.present?
+        ul.list-unstyled
+          - @grouped_allowed_attributes.each do |group|
+            - next if group[0] == 'comment'
+            - next if group[0] == 'private_comment' && !can?(:see_private_comment, @adv)
+            - attr_from = group[0]
+            - attr_to = group[1]
+            - value_from = @adv.send(attr_from)
+            - value_to = @adv.send(attr_to) if attr_to.present?
+            - if value_from.present? || value_to.present?
+              li
+                = t("advertisement.attributes.#{attr_from}")
+                | :
+                - if value_from.present?
+                  '
+                  - if value_to.present? && value_from != value_to
+                    | от
+                    '
+                  = value_from
+                  '
+                  = t("advertisement.units.#{attr_from}")
+                - if value_to.present? && value_from != value_to
+                  - if value_from.present?
+                    | до
+                    '
+                  = value_to
+                  '
+                  = t("advertisement.units.#{attr_from}")
+
+
       - if @adv.user_role == 'owner'
         i.fa.fa-check
         '
@@ -98,25 +96,164 @@ ol.breadcrumb
         '
         =t('activerecord.attributes.user.roles.agent')
         '
-      span
-        a href="#" = @adv.sales_agent
-    p
+      = @adv.sales_agent
+      '
       button.btn.btn-default.btn-xs.ShowAdvPhone data-id=@adv.id
         i.fa.fa-phone.fa-lg
         '
         | показать телефон
-  - if @adv.latitude.present? && @adv.longitude.present?
-    .col-lg-8.clearfix
-      .map#map  data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable=true
-  - if @near_sections.present? || @search_results.present?
-    .col-sm-12
-      p.h4
-        | Больше вариантов недвижимости:
+      - if @near_sections.present?
+        br
+        br
+        = "#{t("advertisement.offer.#{@adv.offer_type}")} #{t("advertisement.category.#{@adv.category}")}"
         '
         - @near_sections.each do |near_section|
-          = link_to near_section.title, near_section.url, class: 'btn btn-default btn-xs'
+          = link_to near_section.short_title, near_section.url, class: 'btn btn-default btn-xs'
           '
-      = render 'advertisements/search_results'
+
+    - if @adv.latitude.present? && @adv.longitude.present?
+      .col-lg-7
+        .map#map  data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable=true
+
+
+  .panel.panel-body.col-xs-12
+    a.btn.btn-danger.btn-xs href='#'
+      i.fa.fa-ban
+      '
+      | пожаловаться
+    '
+    - if can? :manage, @adv
+      a.btn.btn-default.btn-xs href="#{edit_advertisement_path(@adv)}"
+        i.fa.fa-edit
+        '
+        | редактировать
+      '
+    - if can? :manage, @adv
+      a.btn.btn-default.btn-xs href='#'
+        i.fa.fa-level-up
+        '
+        | обновить
+      '
+
+    | сохраните объявление, чтобы легче было потом найти:
+    '
+    a.btn.btn-default.btn-xs href='#'
+      i.fa.fa-star-o
+      '
+      | в избранное
+    '
+
+  - if @search_results.present?
+    .row
+      .col-sm-12
+        = render 'advertisements/search_results'
+
+
+  /p.col-lg-12
+  /  span.small.text-muted
+  /    | Размещено
+  /    '
+  /    strong
+  /      = Russian::strftime @adv.created_at.to_date
+  /    '
+  /    | Обновлено
+  /    '
+  /    strong
+  /      = Russian::strftime @adv.updated_at.to_date
+  /    '
+  /    | Просмотров:
+  /    '
+  /    | всего
+  /    '
+  /    strong
+  /      = @all_days_counter.count
+  /    |,
+  /    '
+  /    |сегодня
+  /    '
+  /    strong
+  /      = @today_counter.count
+  /  span.pull-right
+  /    a.btn.btn-warning.btn-xs
+  /      i.fa.fa-warning.fa-lg
+  /      '
+  /      | пожаловаться
+  /    '
+  /    a.btn.btn-default.btn-xs
+  /      i.fa.fa-book.fa-lg
+  /      '
+  /      | добавить в блокнот
+  /- if @photos.present?
+  /  .col-xs-12.col-lg-7.pull-right.clearfix
+  /    = image_tag @photos.first.advertisement_photo, class: 'img-responsive first_photo_img_action search-photo-size'
+  /    p.text-center.first_photo_comment_action
+  /      = @photos.first.comment
+  /    - @photos.each do |photo|
+  /      a.show_photo_action href="#" full_scr=photo.advertisement_photo comment=photo.comment
+  /        = image_tag photo.advertisement_photo(:thumb), class: 'col-xs-2 thumbnail', style: 'width: 145px;height: 90px;'
+  /.col-lg-5.clearfix
+  /  p
+  /    = @adv.comment
+  /  - @grouped_allowed_attributes.each do |group|
+  /    - next if group[0] == 'comment'
+  /    - attr_from = group[0]
+  /    - attr_to = group[1]
+  /    - value_from = @adv.send(attr_from)
+  /    - value_to = @adv.send(attr_to) if attr_to.present?
+  /    - if value_from.present? || value_to.present?
+  /      p
+  /        label
+  /          = t("advertisement.attributes.#{attr_from}")
+  /        | :
+  /        - if value_from.present?
+  /          '
+  /          - if value_to.present?
+  /            | от
+  /            '
+  /          span.lead
+  /            = value_from
+  /          '
+  /          = t("advertisement.units.#{attr_from}")
+  /        - if value_to.present?
+  /          - if value_from.present?
+  /            | до
+  /            '
+  /          = value_to
+  /          '
+  /          = t("advertisement.units.#{attr_from}")
+  /  p
+  /    - if @adv.user_role == 'owner'
+  /      i.fa.fa-check
+  /      '
+  /      = t('activerecord.attributes.user.roles.owner')
+  /      '
+  /    -else
+  /      i.fa.fa-cube
+  /      '
+  /      =t('activerecord.attributes.user.roles.agent')
+  /      '
+  /    span
+  /      a href="#" = @adv.sales_agent
+  /  p
+  /    button.btn.btn-default.btn-xs.ShowAdvPhone data-id=@adv.id
+  /      i.fa.fa-phone.fa-lg
+  /      '
+  /      | показать телефон
+  /- if @adv.latitude.present? && @adv.longitude.present?
+  /  .col-lg-8.clearfix
+  /    .map#map  data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable=true
+  /- if @near_sections.present? || @search_results.present?
+  /  .col-sm-12
+  /    p.h4
+  /      | Больше вариантов недвижимости:
+  /      '
+  /      - @near_sections.each do |near_section|
+  /        = link_to near_section.short_title, near_section.url, class: 'btn btn-default btn-xs'
+  /        '
+  /    = render 'advertisements/search_results'
+
+
+
 
 
 
