--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -96,7 +96,7 @@ h1
         '
         =t('activerecord.attributes.user.roles.agent')
         '
-      = @adv.sales_agent
+      = @adv.name
       '
       button.btn.btn-default.btn-xs.ShowAdvPhone data-id=@adv.id
         i.fa.fa-phone.fa-lg
