fix form-group nesting bug.

--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -65,4 +65,8 @@ label.col-sm-6.popover-short-padding {
 .button.DelChildren:hover {
   background: firebrick;
 }
+.form-horizontal .form-group.location-group{
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
