--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -108,7 +108,7 @@ h1
         = "#{t("advertisement.offer.#{@adv.offer_type}")} #{t("advertisement.category.#{@adv.category}")}"
         '
         - @near_sections.each do |near_section|
-          = link_to near_section.short_title, near_section.url, class: 'btn btn-default btn-xs'
+          = link_to near_section.short_title, near_section.url, class: 'btn btn-default btn-xs' if near_section.short_title.present?
           '
 
     - if @adv.latitude.present? && @adv.longitude.present?
