--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -18,7 +18,7 @@ h1
 .well.well-sm.clearfix
   .row
     - if @photos.present?
-      .col-xs-12.col-lg-6.pull-right.clearfix
+      .col-xs-12.col-lg-7.pull-right.clearfix
         = image_tag @photos.first.advertisement_photo, class: 'first_photo_img_action search-photo-size'
         p.text-center.first_photo_comment_action
           = @photos.first.comment
@@ -26,7 +26,7 @@ h1
           a.show_photo_action href="#" full_scr=photo.advertisement_photo comment=photo.comment
             = image_tag photo.advertisement_photo(:thumb), class: 'col-xs-2 thumbnail search-photo-size-preview'
 
-    .col-lg-6
+    .col-lg-5
       p
         span.small.text-muted
           | Размещено
@@ -56,59 +56,59 @@ h1
           = @adv.comment
 
 
-      - if @grouped_allowed_attributes.present?
-        ul.list-unstyled
-          - @grouped_allowed_attributes.each do |group|
-            - next if group[0] == 'comment'
-            - attr_from = group[0]
-            - attr_to = group[1]
-            - value_from = @adv.send(attr_from)
-            - value_to = @adv.send(attr_to) if attr_to.present?
-            - if value_from.present? || value_to.present?
-              li
-                = t("advertisement.attributes.#{attr_from}")
-                | :
-                - if value_from.present?
-                  '
-                  - if value_to.present? && value_from != value_to
-                    | от
-                    '
-                  = value_from
-                  '
-                  = t("advertisement.units.#{attr_from}")
-                - if value_to.present? && value_from != value_to
+        - if @grouped_allowed_attributes.present?
+          ul.list-unstyled
+            - @grouped_allowed_attributes.each do |group|
+              - next if group[0] == 'comment'
+              - attr_from = group[0]
+              - attr_to = group[1]
+              - value_from = @adv.send(attr_from)
+              - value_to = @adv.send(attr_to) if attr_to.present?
+              - if value_from.present? || value_to.present?
+                li class="#{'lead' if attr_from == 'price_from'}"
+                  = t("advertisement.attributes.#{attr_from}")
+                  | :
                   - if value_from.present?
-                    | до
                     '
-                  = value_to
-                  '
-                  = t("advertisement.units.#{attr_from}")
+                    - if value_to.present? && value_from != value_to
+                      | от
+                      '
+                    = value_from
+                    '
+                    = t("advertisement.units.#{attr_from}")
+                  - if value_to.present? && value_from != value_to
+                    - if value_from.present?
+                      | до
+                      '
+                    = value_to
+                    '
+                    = t("advertisement.units.#{attr_from}")
 
 
-      - if @adv.user_role == 'owner'
-        i.fa.fa-check
-        '
-        = t('activerecord.attributes.user.roles.owner')
-        '
-      -else
-        i.fa.fa-cube
-        '
-        =t('activerecord.attributes.user.roles.agent')
-        '
-      = @adv.name
-      '
-      button.btn.btn-default.btn-xs.ShowAdvPhone data-id=@adv.id
-        i.fa.fa-phone.fa-lg
-        '
-        | показать телефон
-      - if @near_sections.present?
-        br
-        br
-        = "#{t("advertisement.offer.#{@adv.offer_type}")} #{t("advertisement.category.#{@adv.category}")}"
-        '
-        - @near_sections.each do |near_section|
-          = link_to near_section.short_title, near_section.url, class: 'btn btn-default btn-xs' if near_section.short_title.present?
+        - if @adv.user_role == 'owner'
+          i.fa.fa-check
           '
+          = t('activerecord.attributes.user.roles.owner')
+          '
+        -else
+          i.fa.fa-cube
+          '
+          =t('activerecord.attributes.user.roles.agent')
+          '
+        = @adv.name
+        '
+        button.btn.btn-default.btn-xs.ShowAdvPhone data-id=@adv.id
+          i.fa.fa-phone.fa-lg
+          '
+          | показать телефон
+        - if @near_sections.present?
+          br
+          br
+          = "#{t("activerecord.attributes.section.enum_title.#{@adv.offer_type}")} #{t("activerecord.attributes.section.enum_title.#{@adv.category}")}"
+          '
+          - @near_sections.each do |near_section|
+            = link_to near_section.short_title, near_section.url, class: 'btn btn-default btn-xs' if near_section.short_title.present?
+            '
 
     - if @adv.latitude.present? && @adv.longitude.present?
       .col-lg-7
