--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -27,6 +27,13 @@
   height: 400px;
   margin-bottom: 15px;
 }
+
+.sm-map{
+  width: auto;
+  height: 200px;
+  margin-bottom: 15px;
+}
+
 .location-title {
   font-size: 14px;
 }
