--- a/app/views/advertisements/_locations.html.slim
+++ b/app/views/advertisements/_locations.html.slim
@@ -12,3 +12,8 @@ legend Местоположение
             | Выбрать
             '
             i.caret
+    - if new_action.present?
+      /.form-group
+      - attr_from = 'landmark'
+      - attr_to = nil
+      = render_input attr_from.to_sym,  nil, (defined?(f) ? f.object.send(attr_from) : nil), nil
