--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -63,6 +63,16 @@ h1, h2 {
   margin-left:15px;
 }
 
+.form-inline .form-group.location-group {
+  position: inherit;
+}
+
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 
 
 
