--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -41,41 +41,33 @@
   width:0%;
 }
 
-.search-photo-size{
-  width: 600px;
-  height: 400px;
-}
-
-.search-photo-size-preview{
-  width: 90px;
-  height: 70px;
-}
-
 .width-define{
   width: 110px;
 }
+
 .search-result-header{
   margin: 0em;
   font-size: 1.8em;
 }
+
 .adv-item{
   margin-top: 2px;
   background-color: ivory;
   padding-top: 7px;
   padding-bottom: 7px;
 }
+
 .col-sm-6.popover-long-padding {
   padding-right: 25px;
 }
+
 label.col-sm-6.popover-short-padding {
   float: left;
 }
-.button.DelChildren:hover {
 
-}
-.form-horizontal .form-group.location-group{
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
-}
+//.form-horizontal .form-group.location-group{
+//  margin-left: 5px;
+//  margin-right: 0px;
+//  margin-bottom: 0px;
+//}
 
