--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -17,7 +17,15 @@ h1
   = @adv.h1
 .well.well-sm.clearfix
   .row
-    .col-lg-5
+    .col-md-9.col-lg-7
+      - if @photos.present?
+        .clearfix style="margin-bottom: 15px"
+          = image_tag @photos.first.advertisement_photo, class: 'first_photo_img_action img-responsive search-photo-size', style: "height: 400px;"
+          p.text-center.first_photo_comment_action
+            = @photos.first.comment
+          - @photos.each do |photo|
+            a.show_photo_action href="#" full_scr=photo.advertisement_photo comment=photo.comment
+              = image_tag photo.advertisement_photo(:thumb), class: 'col-xs-2 thumbnail'
       p
         span.small.text-muted
           - if @adv.created_at >= @adv.updated_at
@@ -76,11 +84,6 @@ h1
                     = value_to
                     '
                     = t("advertisement.units.#{attr_from}")
-            - if @adv.latitude.present? && @adv.longitude.present?
-              li
-                a.show_map_action href='#'
-                  | Показать карту
-                .map.sm-map#map.hidden data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable=true
 
         - if @adv.user_role == 'owner'
           i.fa.fa-check
@@ -104,50 +107,62 @@ h1
           = "#{t("activerecord.attributes.section.enum_title.#{@adv.offer_type}")} #{t("activerecord.attributes.section.enum_title.#{@adv.category}")}"
           '
           - @near_sections.each do |near_section|
-            = link_to near_section.short_title, near_section.url, class: 'btn btn-default btn-xs' if near_section.short_title.present?
+            = link_to near_section.short_title, near_section.url if near_section.short_title.present?
             '
-    - if @photos.present?
-      .col-xs-12.col-lg-7
-        = image_tag @photos.first.advertisement_photo, class: 'first_photo_img_action search-photo-size'
-        p.text-center.first_photo_comment_action
-          = @photos.first.comment
-        - @photos.each do |photo|
-          a.show_photo_action href="#" full_scr=photo.advertisement_photo comment=photo.comment
-            = image_tag photo.advertisement_photo(:thumb), class: 'col-xs-2 thumbnail search-photo-size-preview'
 
 
 
-  .panel.panel-body.col-xs-12
-    a.btn.btn-danger.btn-xs href='#'
-      i.fa.fa-ban
-      '
-      | пожаловаться
-    '
-    - if can? :manage, @adv
-      a.btn.btn-default.btn-xs href="#{edit_advertisement_path(@adv)}"
-        i.fa.fa-edit
+
+    - if @adv.latitude.present? && @adv.longitude.present?
+      .col-xs-12.col-lg-5
+        .map#map data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable=true
+  .panel.panel-body
+    .row
+      .col-lg-7
+        | cохраните объявление, чтобы легче было потом найти:
         '
-        | редактировать
-      '
-    - if can? :manage, @adv
-      a.btn.btn-default.btn-xs href='#'
-        i.fa.fa-level-up
+        a.btn.btn-default.btn-xs
+          i.fa.fa-star-o
+          '
+          | в избранное
         '
-        | обновить
-      '
+        a.btn.btn-default.btn-xs
+          '
+          i.fa.fa-twitter.fa-lg
+        '
+        a.btn.btn-default.btn-xs
+          '
+          i.fa.fa-vk.fa-lg
+        '
+        a.btn.btn-default.btn-xs
+          '
+          i.fa.fa-facebook.fa-lg
+      .col-lg-5
+        | ещё можно:
+        '
+        a.btn.btn-danger.btn-xs
+          i.fa.fa-ban
+          '
+          | пожаловаться
+        '
+        - if can? :manage, @adv
+          a.btn.btn-default.btn-xs href="#{edit_advertisement_path(@adv)}"
+            i.fa.fa-edit
+            '
+            | редактировать
+          '
+        - if can? :manage, @adv
+          a.btn.btn-default.btn-xs
+            i.fa.fa-level-up
+            | обновить
 
-    | сохраните объявление, чтобы легче было потом найти:
+  h4
+    | вам могут подойти эти варианты
     '
-    a.btn.btn-default.btn-xs href='#'
-      i.fa.fa-star-o
-      '
-      | в избранное
-    '
+    i.fa.fa-arrow-down
 
   - if @search_results.present?
-    .row
-      .col-sm-12
-        = render 'advertisements/search_results'
+    = render 'advertisements/search_results'
 
 
 
