--- a/app/views/advertisements/_form.html.slim
+++ b/app/views/advertisements/_form.html.slim
@@ -12,6 +12,7 @@ h1
     = f.hidden_field :property_type, class: 'property-type-value'
     = f.hidden_field :latitude, class: 'latitude-value'
     = f.hidden_field :longitude, class: 'longitude-value'
+    = f.hidden_field :zoom, class: 'zoom-value'
     = render '/advertisements/user', f: f
     .adv-params
       legend Раздел
