--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -2,7 +2,7 @@
   ul.list-unstyled
     - @search_results.each_with_index do |adv, index|
       li.media.clearfix.adv_item class="#{'adv_item_even' if index % 2 == 0}"
-        span.col-lg-1.col-md-1.col-sm-12.col-xs-12
+        span.col-lg-1.col-md-1.col-sm-12.col-xs-12.text-muted.small
           - date = (adv.created_at >= adv.updated_at) ? adv.created_at : adv.updated_at
           = l date
           '
