--- a/app/views/advertisements/get_locations.js.erb
+++ b/app/views/advertisements/get_locations.js.erb
@@ -5,6 +5,15 @@ el.popover({
     placement: 'bottom'
 }).popover("show");
 
+el.find('input[type="text"]').focus();
+$('.popover:first').css('width', $('.popover').width());
+if (el.closest('.location-group').attr('editable') === 'true') {
+    $('.search-or-create-street-container-action').removeClass('hidden')
+}
+
+
+
+
 
 
 
