--- a/app/views/advertisements/_attributes.html.slim
+++ b/app/views/advertisements/_attributes.html.slim
@@ -1,8 +1,14 @@
-- @grouped_allowed_attributes.each do |group|
-  .form-group
-    - attr_from = group[0]
-    - attr_to = group[1]
-    = render_input attr_from.to_sym, (attr_to ? attr_to.to_sym : nil), (defined?(f) ? f.object.send(attr_from) : nil), (attr_to && defined?(f) ? f.object.send(attr_to) : nil)
-
+- if @grouped_allowed_attributes.present?
+  - @grouped_allowed_attributes.each do |group|
+    .form-group
+      - attr_from = group[0]
+      - attr_to = group[1]
+      = render_input attr_from.to_sym, (attr_to ? attr_to.to_sym : nil), (defined?(f) ? f.object.send(attr_from) : nil), (attr_to && defined?(f) ? f.object.send(attr_to) : nil)
+- else
+  .col-sm-offset-3
+    span
+      i.fa.fa-arrow-up
+      '
+      | Выберите тип недвижимости
 
 
