--- a/app/views/advertisements/_locations.html.slim
+++ b/app/views/advertisements/_locations.html.slim
@@ -6,25 +6,13 @@ legend Местоположение
       '
       | место
     .col-sm-9.form.inline-block
-        .form-group.location-group.btn-group multi=true state="#{@location_state}"
-          .btn.btn-default.GetChildren.dropdown-toggle lid="#{id}" data-toggle="dropdown"
+        .form-group.location-group.btn-group multi='true' editable='true' state="#{@location_state}"
+          .btn.btn-default.GetChildren.dropdown-toggle lid=0 data-toggle="dropdown"
             | Место
             '
             i.caret
-  - if new_action.present?
-    .form-group
-      - attr_from = 'landmark'
-      = render_input attr_from.to_sym,  nil, (defined?(f) ? f.object.send(attr_from) : nil), nil
+  .form-group
+    = render_input :landmark,  nil, f.object.landmark , nil
 
-    /.col-sm-9.form.form-horizontal
-    /  span.button-toolbar
-    /    .location-group multi="#{multi}" state="#{@location_state}"
-    /      .button.btn.btn-default.GetChildren lid="#{id}" data-toggle="dropdown"
-    /        | Выбрать
-    /        '
-    /        i.caret
-    /- new_action ||= nil
-    /- if new_action.present?
-    /  - attr_from = 'landmark'
-    /  = render_input attr_from.to_sym,  nil, (defined?(f) ? f.object.send(attr_from) : nil), nil
+
 
