--- a/app/views/advertisements/_popover_locations.html.slim
+++ b/app/views/advertisements/_popover_locations.html.slim
@@ -1,9 +1,38 @@
-- @locations.each_value do |value|
+- if @locations.present?
+  - @locations.each_value do |value|
+    legend
+      = t("activerecord.attributes.location.#{value.first[:location_type]}")
+    .row.top-buffer
+      .col-md-12
+        .empty-search-container-action.hidden
+          | Ничего не найдено
+        .btn-group.search-container-action data-toggle="buttons"
+          - value.sort_by{ |l| l[:title] }.each do |location|
+            .location-button name="#{location[:location_type]}" has_children="#{location[:has_children]}" lid="#{location[:id]}" class="button btn btn-default SelectLocation"
+              = location[:title]
+- elsif @location.present? && @location.street? && can?(:manage, Location)
   legend
-    = t("activerecord.attributes.location.#{value.first[:location_type]}")
+    = t("activerecord.attributes.location.street")
   .row.top-buffer
     .col-md-12
-      .btn-group data-toggle="buttons"
-        - value.sort_by{ |l| l[:title] }.each do |location|
-          .location-button name="#{location[:location_type]}" has_children="#{location[:has_children]}" lid="#{location[:id]}" class="button btn btn-default SelectLocation"
-            = location[:title]
+      .empty-search-container-action.hidden
+        | Ничего не найдено
+      .btn-group.search-container-action data-toggle="buttons"
+
+
+- if @location.present? && @location.street? && can?(:manage, Location)
+  .search-or-create-street-container-action.hidden
+    legend
+      | поиск
+    .top-buffer
+      .col-md-12
+        .form-group
+          label
+            i.fa.fa-search
+          '
+          = text_field_tag 'location[title]', nil, class: 'search-or-create-street-action', placeholder: ' найти по названию'
+          = hidden_field_tag 'location[location_type]', :address
+          = hidden_field_tag 'location[location_id]',  @location.id
+          '
+          = button_tag 'Добавить новый адрес', class: 'hidden create-street-action'
+
